--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
