--- a/react-form/package.json
+++ b/react-form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "react-form",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^4.7.1",
-    "styled-components": "^6.1.12"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
